[package]
name = "n_moku"
version = "0.2.0"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2021"
description = "N moku is a tic-tac-toe like game but the field is extended to N by N."
readme = "README.md"
repository = "https://github.com/KBone12/N-moku"
license-file = "LICENSE"

[dependencies]
crossterm = "0.24.0"
fastrand = "1.7.0"
